Fix usernames not showing on mobile

--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ div::before {
   div.in-view::before {
     opacity: 1;
   }
+  div.inv-iew h3 {
+    opacity: 1;
+  }
 }
 
 .important {
